--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: 
+name: NPM Publish
 
 # Controls when the action will run. 
 on:
@@ -21,17 +21,17 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
     - name: Checkout
-      uses: actions/checkout@v1
+        uses: actions/checkout@v1
     - name: Setup Node.js
-      uses: actions/setup-node@v1
-      with:
+        uses: actions/setup-node@v1
+        with:
         node-version: 12
     - name: Install dependencies
-      run: npm ci
+        run: npm ci
     - name: Run tests
-      run: npm test
+        run: npm test
     - name: Release
-      env:
+        env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: npm run semantic-release
