--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -15,23 +15,12 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  test-and-release:
-    name: Run tests and release
-    runs-on: ubuntu-18.04
-    steps:
-    - name: Checkout
-        uses: actions/checkout@v1
-    - name: Setup Node.js
-        uses: actions/setup-node@v1
-        with:
-        node-version: 12
-    - name: Install dependencies
-        run: npm ci
-    - name: Run tests
-        run: npm test
-    - name: Release
-        env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: npm run semantic-release
+  prerelease:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v1
+            - name: Make stable release to npm
+              uses: esamatti/npm-release@v2
+              with:
+                  type: stable
+                  token: ${{ secrets.NPM_TOKEN }}
