--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,21 +1,26 @@
-# This is a basic workflow to help you get started with Actions
-
-name: NPM Publish
-
-# Controls when the action will run. 
+name: npm-publish
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
-  release:
-    types:
-      - "published"
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+  push:
+    branches:
+      - master # Change this to your default branch
 jobs:
-  prerelease:
-        runs-on: ubuntu-18.04
-        steps:
-            - uses: actions/checkout@v1
-            - name: Make stable release to npm
-              uses: esamatti/npm-release@v2
-              with:
-                  type: stable
-                  token: ${{ secrets.NPM_TOKEN }}
+  npm-publish:
+    name: npm-publish
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+    - name: Publish if version has been updated
+      uses: pascalgn/npm-publish-action@1.3.6
+      with: # All of theses inputs are optional
+        tag_name: "v%s"
+        tag_message: "v%s"
+        create_tag: "true"
+        commit_pattern: "^Release (\\S+)"
+        workspace: "."
+        publish_command: "yarn"
+        publish_args: "--non-interactive"
+      env: # More info about the environment variables in the README
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Leave this as is, it's automatically generated
+        NPM_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }} # You need to set this in your repo settings
+
