--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pagetables",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "author": {
     "name": "Sam Maosa",
     "email": "maosa.sam@gmail.com"
@@ -53,9 +53,11 @@
   "peerDependencies": {
     "vue": "^2.6.11"
   },
-  "publishConfig": { 
-    "access": "public", 
-    "branches": ["master"] 
+  "publishConfig": {
+    "access": "public",
+    "branches": [
+      "master"
+    ]
   },
   "engines": {
     "node": ">=10"
